security/network-policies/manifests/egress/all-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  posSelector:
    matchLabels:
      role: db
  policyType:
    - Ingress
    - Egress
    ingress:
      - from:
          - podSelector:
              matchLabels:
                name: api-pod
            namespaceSelector:
              matchLabels:
                name: prod
          - ipBlock:
              cidr: 192.168.0.0/24
        ports:
          - protocol: TCP
            port: 3306
    egress:
      - to:
          - ipBlock:
              cidr: 192.168.0.0/24
        ports:
          - protocol: TCP
            port: 80
